--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@logseq/libs": "^0.0.10",
+    "cheerio": "^1.0.0-rc.12",
     "clsx": "^1.2.1",
+    "cross-fetch": "^4.0.0",
     "exponential-backoff": "^3.1.0",
     "fuse.js": "^6.6.2",
     "immer": "^9.0.19",
     "openai": "^3.2.1",
     "postcss": "^8.4.20",
+    "puppeteer": "^22.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4",
